<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.pokebattler</groupId>
    <artifactId>pokemongo-game-master</artifactId>
    <version>2.48.2-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>PokeBattler Fight</name>
    <description>Fight server for PokeBattler</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <pogoprotos.version>2.56.2</pogoprotos.version>
        <pogoprotos.artifactId>POGOProtos</pogoprotos.artifactId>
        <protobuf.version>3.20.0</protobuf.version>
        <gamemaster.version>2.56.2-SNAPSHOT</gamemaster.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>${pogoprotos.artifactId}</artifactId>
            <version>${pogoprotos.version}</version>
            <type>jar</type>
            <!--TODO: If you have problems with the first time you build please runs 'mvn clean -f pom.xml' or remove the comment mode on the following lines once first build ok put it back like this.-->
            <!--<scope>system</scope>
            <systemPath>${project.basedir}/lib/${pogoprotos.artifactId}-${pogoprotos.version}.jar</systemPath>-->
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java-util</artifactId>
            <version>${protobuf.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
                <executions>
                    <execution>
                        <id>Initialize  -> Install libs files to .m2 local repo</id>
                        <phase>initialize</phase>
                        <configuration>
                            <file>${project.basedir}/lib/${pogoprotos.artifactId}-${pogoprotos.version}.jar</file>
                            <repositoryLayout>default</repositoryLayout>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>${pogoprotos.artifactId}</artifactId>
                            <version>${pogoprotos.version}</version>
                            <packaging>jar</packaging>
                            <generatePom>true</generatePom>
                        </configuration>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>Clean -> Install libs files to .m2 local repo</id>
                        <phase>clean</phase>
                        <configuration>
                            <file>${project.basedir}/lib/${pogoprotos.artifactId}-${pogoprotos.version}.jar</file>
                            <repositoryLayout>default</repositoryLayout>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>${pogoprotos.artifactId}</artifactId>
                            <version>${pogoprotos.version}</version>
                            <packaging>jar</packaging>
                            <generatePom>true</generatePom>
                        </configuration>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m
                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
                    </argLine>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>
 </project>
